--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>hu.bme.mit.codemodel</groupId>
     <artifactId>rifle</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <neo4j.version>2.3.8</neo4j.version>
+        <jqassistant.version>1.1.4</jqassistant.version>
+    </properties>
 
     <packaging>jar</packaging>
 
@@ -66,13 +70,13 @@
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
-            <version>3.0.0</version>
+            <version>${neo4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.neo4j.app</groupId>
             <artifactId>neo4j-server</artifactId>
-            <version>3.0.0</version>
+            <version>${neo4j.version}</version>
 
             <exclusions>
                 <exclusion>
@@ -93,7 +97,7 @@
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-graphviz</artifactId>
-            <version>3.0.0</version>
+            <version>${neo4j.version}</version>
         </dependency>
 
         <dependency>
@@ -123,6 +127,41 @@
             <groupId>net.jodah</groupId>
             <artifactId>failsafe</artifactId>
             <version>0.8.3</version>
+        </dependency>
+
+        <!-- jQA Deps -->
+        <dependency>
+            <groupId>com.buschmais.jqassistant.core</groupId>
+            <artifactId>jqassistant.core.store</artifactId>
+            <version>${jqassistant.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.jqassistant.core</groupId>
+            <artifactId>jqassistant.core.scanner</artifactId>
+            <version>${jqassistant.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.jqassistant.core</groupId>
+            <artifactId>jqassistant.core.plugin</artifactId>
+            <version>${jqassistant.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.jqassistant.plugin</groupId>
+            <artifactId>jqassistant.plugin.common</artifactId>
+            <version>${jqassistant.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.jqassistant.plugin</groupId>
+            <artifactId>jqassistant.plugin.common</artifactId>
+            <type>test-jar</type>
+            <version>${jqassistant.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- JUnit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
     </dependencies>
 
